--- a/src/index.html
+++ b/src/index.html
@@ -5,6 +5,6 @@
     <title>TTS</title>
 </head>
 <body>
-test
+<script src="https://unpkg.com/twitch-js@2.0.0-beta.42/dist/twitch.js"></script>
 </body>
 </html>
