--- a/src/index.html
+++ b/src/index.html
@@ -6,6 +6,6 @@
 </head>
 <body>
 <script src="https://unpkg.com/twitch-js@2.0.0-beta.42/dist/twitch.js"></script>
-<script type="module" src="./script.js"></script>
+<script type="text/javascript" src="./script.js"></script>
 </body>
 </html>
